@@ -1,0 +1,75 @@
+package com.planet_ink.coffee_mud.Abilities.Spells;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.Faction.FRange;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Libraries.interfaces.ExpertiseLibrary;
+import com.planet_ink.coffee_mud.Libraries.interfaces.LegalLibrary;
+import com.planet_ink.coffee_mud.Libraries.interfaces.TimeManager;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2019-2019 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+	   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+public class Spell_LimitedWish extends Spell_Wish
+{
+
+	@Override
+	public String ID()
+	{
+		return "Spell_LimitedWish";
+	}
+
+	private final static String localizedName = CMLib.lang().L("Limited Wish");
+
+	@Override
+	public String name()
+	{
+		return localizedName;
+	}
+
+	@Override
+	protected int getXPCOSTAdjustment(final MOB mob, final int xpLoss)
+	{
+		final int cost=super.getXPCOSTAdjustment(mob, xpLoss);
+		return cost * 2;
+	}
+
+	@Override
+	protected boolean isLegalTarget(final MOB mob, final Physical target, final boolean isTargetChanger, final String myWish)
+	{
+		if((isTargetChanger) && (target instanceof MOB) && (target != mob))
+		{
+			final int baseLoss=getXPCOSTAdjustment(mob,10);
+			CMLib.leveler().postExperience(mob,null,null,-baseLoss,false);
+			mob.tell(L("Your attempted wish has cost you @x1 experience points, but is beyond the power of limited wish.",""+baseLoss));
+			return false;
+		}
+		return true;
+	}
+
+}
