@@ -1746,6 +1746,30 @@ Example  : cast "lightning bolt" orc\n\r\
 This spell causes an arching bolt of lightning to shoot from the caster towards \
 the target.  This tends to have a negative effect on the target`s health.
 
+SPELL_LIMITED_WISH=SPELL_LIMITEDWISH
+SPELL_LIMITEDWISH=<ABILITY>\
+Usage    : CAST "LIMITED WISH" (FOR)([TARGET NAME]) (...) \n\r\
+Example  : cast "limited wish" for hassan to turn into a frog\n\r\
+Example  : cast "limited wish" to be recalled\n\r\
+Example  : cast "limited wish" to teleport to smurfy road\n\r\
+Example  : cast "limited wish" for more strength\n\r\
+Example  : cast "limited wish" for 1000 gold coins\n\r\
+Example  : cast "limited wish" for the one ring\n\r\
+Example  : cast "limited wish" to be immune to fire\n\r\
+Example  : cast "limited wish" to be higher level\n\r\
+This, almost most powerful of magic spells, causes most of the spellcasters wishes \
+to come true.  The cost to cast the spell is all of the casters mana \
+plus 50 experience points, and will require a lengthy recovery before \
+it can be cast again.  The cost for having the wish granted may \
+range from nothing more, to further experience drains, to the loss \
+of a level, and/or a point of permanent Constitution.  Wishing \
+for changes in level to players or items is the most costly, as it will \
+cause the caster to lose at least as many levels as he wishes \
+the target to gain or lose.  Limited Wish is twice as costly in \
+experience points as the full Wish spell, and while it may be cast on another target, if they \
+are in the room when the wish is cast, the most powerful wishes cast on others \
+will fail due to being beyond the power of the limited wish.
+
 SPELL_LIMBRACK=SPELL_LIMB_RACK
 SPELL_LIMB_RACK=<ABILITY>\
 Usage    : CAST "LIMB RACK" [TARGET NAME]\n\r\
@@ -3017,8 +3041,9 @@ range from nothing more, to further experience drains, to the loss \
 of a level, and/or a point of permanent Constitution.  Wishing \
 for changes in level to players or items is the most costly, as it will \
 cause the caster to lose at least as many levels as he wishes \
-the target to gain or lose. ** If wish is cast ON another target, the \
-other target must be in the room when the wish is cast!
+the target to gain or lose.  Unlike Limited Wish, even very powerful \
+wishes may be cast another target, provided they are in the room when the wish is cast! \
+Wish also costs half the experience drain that Limited Wish does.
 
 SPELL_WIZARDLOCK=SPELL_WIZARD_LOCK
 SPELL_WIZARD_LOCK=<ABILITY>\
